前端工作大体模版完成

--- a/templates/figure.html
+++ b/templates/figure.html
@@ -22,14 +22,10 @@
     <![endif]-->
 
 
-
-
-
     <!--时间表的样式-->
     <link href="/static/css/conftimetable.css" rel="stylesheet" type="text/css">
     <!--时间表的动态位置移动-->
     <link href="/static/css/conftimetable-responsive.css" rel="stylesheet" type="text/css" media="screen">
-
 
 
     <!-- External JavaScripts
@@ -64,24 +60,28 @@
     <meta name="theme-color" content="#ffffff">
 
     <style>
-        .figure-border1{
-            border-style:solid;
-            border-color:#FFFFFF #FFFFFF darkblue #FFFFFF;
+        .figure-border1 {
+            border-style: solid;
+            border-color: #FFFFFF #FFFFFF darkblue #FFFFFF;
         }
+
         .figure-border2 {
             border-style: dotted;
             border-color: #FFFFFF #FFFFFF blue #FFFFFF;
         }
+
         .img-responsive {
             display: inline-block;
             height: auto;
             max-width: 100%;
         }
+
         .grid {
             list-style-type: none;
             padding: 0;
             margin: 0;
         }
+
         .grid::after {
             content: '';
             display: block;
@@ -109,6 +109,7 @@
                 margin-bottom: 0;
             }
         }
+
         @media (min-width: 992px) {
             .grid-item-md-6 {
                 width: 50%;
@@ -118,6 +119,7 @@
                 width: 25%;
             }
         }
+
         .section-title {
             color: #313131;
             letter-spacing: 1px;
@@ -156,14 +158,6 @@
                 <!-- #logo end -->
 
 
-
-
-
-
-
-
-
-
                 <!-- Primary Navigation
                 ============================================= -->
                 <nav class="primary-menu">
@@ -184,7 +178,6 @@
                         </li>
 
 
-
                         <li class="sub-menu">
                             <a href="chairs.html" class="sf-with-ul">
                                 <div>Chairs</div>
@@ -193,7 +186,7 @@
                         </li>
 
 
-                        <li class="sub-menu" >
+                        <li class="sub-menu">
                             <a href="about.html" class="sf-with-ul">
                                 <div>About Us</div>
                             </a>
@@ -202,9 +195,7 @@
                         </li>
 
 
-
                     </ul>
-
 
 
                     <!-- #top-search end -->
@@ -217,27 +208,34 @@
         </div>
 
     </header>
-<div class="container">
-    <!--<div class="jumbotron" style="background-color:#FFF">-->
-    <div class="row">
-        <div class="col-md-12">
-            <div  class="figure-border1" id="LECTURERS">
-                <h2 ><a role="button" class="section-title">CHAIRS</a></h2>
-            </div>
-            <br>
-            <br>
-            <div class="grid-item grid-item-sm-3">
-                <img src="/static/images/human/haipa.jpg" alt="" class="img-responsive center-block">
-            </div>
-            <div class="col-md-9">
-                <h3>Ting Wu（吴铤）</h3>
-                <p.small>
-                    &nbsp;&nbsp;Ting Wu is currently a professor of Hangzhou Dianzi University, and his major research interest is information security. He has been invited as the principal investigator in the 863 Project, and the member of the 973 Program. He has major research and development projects for the Natural Science Foundation of Zhejiang and National Natural Science Foundation. Now, he is the Dean of the School of Cyberspace, Hangzhou Dianzi University, the committee member of the secrecy and management department in the Ministry of Education, and the director of the Chinese Confidential Association.
-                </p.small>
+    <div class="container">
+        <!--<div class="jumbotron" style="background-color:#FFF">-->
+        <div class="row">
+            <div class="col-md-12">
+                <div class="figure-border1" id="LECTURERS">
+                    <h2><a role="button" class="section-title">CHAIRS</a></h2>
+                </div>
+                <br>
+                <br>
+                <div class="grid-item grid-item-sm-3">
+                    <img src="/static/images/human/TingWu.jpg" alt="" class="img-responsive center-block">
+                </div>
+                <div class="col-md-9">
+                    <h3>Ting Wu（吴铤）</h3>
+                    <p.small>
+                        &nbsp;&nbsp;Ting Wu is currently a professor of Hangzhou Dianzi University, and his major
+                        research interest is information security. He has been invited as the principal investigator in
+                        the 863 Project, and the member of the 973 Program. He has major research and development
+                        projects for the Natural Science Foundation of Zhejiang and National Natural Science Foundation.
+                        Now, he is the Dean of the School of Cyberspace, Hangzhou Dianzi University, the committee
+                        member of the secrecy and management department in the Ministry of Education, and the director
+                        of the Chinese Confidential Association.
+                    </p.small>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</section>
 <footer id="footer" class="dark" style="margin-top: 200px">
 
     <div class="container">
@@ -250,7 +248,8 @@
 
                 <div class="widget clearfix">
 
-                    <img src="/static/images/web/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
+                    <img src="/static/images/web/hdu_ics_logo.png" alt="" class="footer-logo"
+                         style="float: left;width: 100%">
 
                     <p style="position: relative;top:5px;left:25px">We will always update the meeting time as above.</p>
                 </div>
@@ -275,7 +274,6 @@
                     </li>
 
 
-
                     <li class="sub-menu">
                         <a href="chairs.html" class="sf-with-ul">
                             <div>Chairs</div>
@@ -284,7 +282,7 @@
                     </li>
 
 
-                    <li class="sub-menu" >
+                    <li class="sub-menu">
                         <a href="about.html" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
@@ -293,9 +291,7 @@
                     </li>
 
 
-
                 </ul>
-
 
 
                 <!-- #top-search end -->
@@ -303,22 +299,11 @@
             </nav>
 
 
-
         </div>
 
     </div>
 
     <!-- .footer-widgets-wrap end -->
-
-
-
-
-
-
-
-
-
-
 
 
     <!-- Copyrights
@@ -344,10 +329,10 @@
 
         </div>
 
-    </div></div>
+    </div>
+    </div>
     <!-- #copyrights end -->
 
 </footer>
 <script type="text/javascript" src="/static/js/functions.js"></script>
-
 </body>
