figure板块完成信息读取与html页面展示

--- a/templates/chairs.html
+++ b/templates/chairs.html
@@ -89,22 +89,22 @@
             <nav class="primary-menu">
                 <ul class="down-menu nav-menu" style="touch-action: pan-y;">
                     <li>
-                        <a href="index.html">
+                        <a href="index">
                             <div>Home</div>
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="conference.html" class="sf-with-ul">
+                        <a href="conference" class="sf-with-ul">
                             <div>conferences</div>
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="chairs.html" class="sf-with-ul">
+                        <a href="chairs" class="sf-with-ul">
                             <div>Chairs</div>
                         </a>
                     </li>
                     <li class="sub-menu" >
-                        <a href="about.html" class="sf-with-ul">
+                        <a href="about" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
                     </li>
@@ -144,14 +144,14 @@
                 <div class="panel panel-default">
                     <div class="panel-heading" role="tab">
                         <h4 class="panel-title">
-                            <a  role="button"  href="figurezhuzefei.html"  > ZeFei Zhu (朱泽飞)</a>
+                            <a  role="button"  href="figure/1"  > ZeFei Zhu (朱泽飞)</a>
                         </h4>
                     </div>
                 </div>
                 <div class="panel panel-default">
                     <div class="panel-heading" role="tab" >
                         <h4 class="panel-title">
-                            <a  role="button"  href="figure.html"  > Ting Wu（吴铤）</a>
+                            <a  role="button"  href="figure/2"  > Ting Wu（吴铤）</a>
                         </h4>
                     </div>
                 </div>
@@ -177,22 +177,22 @@
             <nav class="primary-menu">
                 <ul class="down-menu nav-menu" style="touch-action: pan-y;">
                     <li>
-                        <a href="index.html">
+                        <a href="index">
                             <div>Home</div>
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="conference.html" class="sf-with-ul">
+                        <a href="conference" class="sf-with-ul">
                             <div>conferences</div>
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="chairs.html" class="sf-with-ul">
+                        <a href="chairs" class="sf-with-ul">
                             <div>Chairs</div>
                         </a>
                     </li>
                     <li class="sub-menu" >
-                        <a href="about.html" class="sf-with-ul">
+                        <a href="about" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
                     </li>
