--- a/templates/conference.html
+++ b/templates/conference.html
@@ -103,13 +103,13 @@
                     <ul class="down-menu nav-menu" style="touch-action: pan-y;">
 
                         <li>
-                            <a href="index.html">
+                            <a href="index">
                                 <div>Home</div>
                             </a>
                         </li>
 
                         <li class="sub-menu">
-                            <a href="conference.html" class="sf-with-ul">
+                            <a href="conference" class="sf-with-ul">
                                 <div>conferences</div>
                             </a>
 
@@ -118,7 +118,7 @@
 
 
                         <li class="sub-menu">
-                            <a href="chairs.html" class="sf-with-ul">
+                            <a href="chairs" class="sf-with-ul">
                                 <div>Chairs</div>
                             </a>
 
@@ -126,7 +126,7 @@
 
 
                         <li class="sub-menu" >
-                            <a href="about.html" class="sf-with-ul">
+                            <a href="about" class="sf-with-ul">
                                 <div>About Us</div>
                             </a>
 
@@ -198,93 +198,46 @@
 
     </div>
 </div>
+</section>
 <footer id="footer" class="dark" style="margin-top: 883px">
-
     <div class="container">
-
         <!-- Footer Widgets
             ============================================= -->
         <div class="footer-widgets-wrap clearfix">
-
             <div class="col_one_third">
-
                 <div class="widget clearfix">
-
                     <img src="/static/images/web/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
-
                     <p style="position: relative;top:5px;left:25px">We will always update the meeting time as above.</p>
-
-
-
-
                 </div>
-
-
             </div>
             <nav class="primary-menu">
-
                 <ul class="down-menu nav-menu" style="touch-action: pan-y;">
-
                     <li>
-                        <a href="index.html">
+                        <a href="index">
                             <div>Home</div>
                         </a>
                     </li>
-
                     <li class="sub-menu">
-                        <a href="conference.html" class="sf-with-ul">
+                        <a href="conference" class="sf-with-ul">
                             <div>conferences</div>
                         </a>
-
                     </li>
-
-
-
                     <li class="sub-menu">
-                        <a href="chairs.html" class="sf-with-ul">
+                        <a href="chairs" class="sf-with-ul">
                             <div>Chairs</div>
                         </a>
-
                     </li>
-
-
                     <li class="sub-menu" >
-                        <a href="about.html" class="sf-with-ul">
+                        <a href="about" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
-
-
                     </li>
-
-
-
                 </ul>
-
-
-
                 <!-- #top-search end -->
-
             </nav>
-
-
-
         </div>
-
     </div>
-
     <!-- .footer-widgets-wrap end -->
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- Copyrights
         ============================================= -->
     <div id="copyrights">
@@ -295,22 +248,14 @@
                 Copyrights © 2018 All Rights Reserved - HDU
                 <!--<br>-->
                 <!--<a href="http://www.acm.org/sigs/volunteer_resources/officers_manual/code%20of%20conduct">ACM Code of Conduct</a>-->
-
             </div>
-
             <!--<div class="col_half col_last tright">-->
             <!--<div class="fright clearfix">-->
-
             <!--</div>-->
-
             <!--<div class="clear"></div>-->
-
-
         </div>
-
     </div></div>
     <!-- #copyrights end -->
-
 </footer>
 <script type="text/javascript" src="/static/css/functions.js"></script>
 </body>
