--- a/templates/about.html
+++ b/templates/about.html
@@ -53,21 +53,19 @@
     <meta name="theme-color" content="#ffffff">
 
 
-
-
     <title>HDU Conference Service Platform 2018 - About</title>
-
 
 
     <style>
         .aboutus-box1 {
             position: relative;
-            background-color:  #1ABC9C;
+            background-color: #1ABC9C;
             color: #fff;
             text-align: center;
             padding: 35px 0;
             margin: 15px 0 0;
         }
+
         .aboutus-box2 {
             position: relative;
             background-color: #34495E;
@@ -76,14 +74,16 @@
             padding: 35px 0;
             margin: 15px 0 0;
         }
+
         .aboutus-box3 {
             position: relative;
-            background-color:#E74C3C;
+            background-color: #E74C3C;
             color: #fff;
             text-align: center;
             padding: 35px 0;
             margin: 15px 0 0;
         }
+
         .aboutus-box1::before {
             content: '';
             position: absolute;
@@ -93,6 +93,7 @@
             left: 5px;
             border: 1px solid #fff;
         }
+
         .aboutus-box2::before {
             content: '';
             position: absolute;
@@ -102,6 +103,7 @@
             left: 5px;
             border: 1px solid #fff;
         }
+
         .aboutus-box3::before {
             content: '';
             position: absolute;
@@ -111,8 +113,6 @@
             left: 5px;
             border: 1px solid #fff;
         }
-
-
 
 
     </style>
@@ -139,14 +139,6 @@
             <!-- #logo end -->
 
 
-
-
-
-
-
-
-
-
             <!-- Primary Navigation
             ============================================= -->
             <nav class="primary-menu">
@@ -154,30 +146,29 @@
                 <ul class="down-menu nav-menu" style="touch-action: pan-y;">
 
                     <li>
-                        <a href="index.html">
+                        <a href="index">
                             <div>Home</div>
                         </a>
                     </li>
 
                     <li class="sub-menu">
-                        <a href="conference.html" class="sf-with-ul">
+                        <a href="conference" class="sf-with-ul">
                             <div>conferences</div>
                         </a>
 
                     </li>
 
 
-
                     <li class="sub-menu">
-                        <a href="chairs.html" class="sf-with-ul">
+                        <a href="chairs" class="sf-with-ul">
                             <div>Chairs</div>
                         </a>
 
                     </li>
 
 
-                    <li class="sub-menu" >
-                        <a href="about.html" class="sf-with-ul">
+                    <li class="sub-menu">
+                        <a href="about" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
 
@@ -185,9 +176,7 @@
                     </li>
 
 
-
                 </ul>
-
 
 
                 <!-- #top-search end -->
@@ -201,24 +190,34 @@
 
 </header>
 <section id="aboutus" class="section faq aboutus clearfix">
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12">
-            <center><h1 class="uppercase" style="font-weight: 600;color: black;">About HDU</h1></center>
-            <p>Located in the historical and cultural city of Hangzhou, China, Hangzhou Dianzi University is an institution of higher learning that offers multiple disciplines, including engineering, science, economics, management, literature, law and education.
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <center><h1 class="uppercase" style="font-weight: 600;color: black;">About HDU</h1></center>
+                <p>Located in the historical and cultural city of Hangzhou, China, Hangzhou Dianzi University is an
+                    institution of higher learning that offers multiple disciplines, including engineering, science,
+                    economics, management, literature, law and education.
+                    <br>
+                    <br>
+                    Since its foundation, the talent fostering system continues to improve and the university has come
+                    to offer programs at a variety of levels, such as undergraduate, graduate and continuing education
+                    and vocational education.<br><br>
+                    In 2003, with approval from the Ministry of Education, the university launched its doctoral program
+                    and set up one post-doctoral research station and one joint-doctoral station with Zhejiang
+                    University, also HDU has 2 Joint Doctoral Programs with
+                    Dublin City University, Ireland and Queen’s University, Belfast, UK; 3 disciplines are qualified to
+                    Doctor’s (Ph.D ) Degrees, another 6 specialties like Software Engineering are key disciplines of
+                    Zhejiang Province.<br>
+                </p>
                 <br>
                 <br>
-                Since its foundation, the talent fostering system continues to improve and the university has come to offer programs at a variety of levels, such as undergraduate, graduate and continuing education and vocational education.<br><br>
-                In 2003, with approval from the Ministry of Education, the university launched its doctoral program and set up one post-doctoral research station and one joint-doctoral station with Zhejiang University, also HDU has 2 Joint Doctoral Programs with
-                Dublin City University, Ireland and Queen’s University, Belfast, UK; 3 disciplines are qualified to Doctor’s  (Ph.D ) Degrees, another 6 specialties like Software Engineering are key disciplines of Zhejiang Province.<br>
-            </p>
-            <br>
-            <br>
-            <center><h3 class="uppercase" style="font-weight: 600;color: black;">Our Aims</h3></center>
-            <p>provides a premier interdisciplinary platform for researchers, practitioners and educators to present and discuss the most recent innovations, trends, and concerns as well as practical challenges encountered and solutions adopted in the fields of Internet of Things Security.</p>
+                <center><h3 class="uppercase" style="font-weight: 600;color: black;">Our Aims</h3></center>
+                <p>provides a premier interdisciplinary platform for researchers, practitioners and educators to present
+                    and discuss the most recent innovations, trends, and concerns as well as practical challenges
+                    encountered and solutions adopted in the fields of Internet of Things Security.</p>
+            </div>
         </div>
     </div>
-</div>
 </section>
 
 <section id="aboutus" class="section faq aboutus clearfix">
@@ -227,7 +226,8 @@
             <div class="col-md-4 col-sm-6">
                 <div class="aboutus-box1">
                     <h3 class="uppercase" style="font-weight: 600;color: #FFFFFF;">what we do</h3>
-                    <p>We will push the location、time and lecturer of the latest conference in a timely manner on our website to provide the better access for you.</p>
+                    <p>We will push the location、time and lecturer of the latest conference in a timely manner on our
+                        website to provide the better access for you.</p>
                     </p>
                     <br>
                 </div>
@@ -235,23 +235,24 @@
             <div class="col-md-4 col-sm-6">
                 <div class="aboutus-box2">
                     <h3 class="uppercase" style="font-weight: 600;color: #FFFFFF;">what you get</h3>
-                    <p>You can find the latest information about the conference through our website. Welcome to your participation and you can get more information.</p>
+                    <p>You can find the latest information about the conference through our website. Welcome to your
+                        participation and you can get more information.</p>
                     <br>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
-                <div class="aboutus-box3" >
+                <div class="aboutus-box3">
                     <h3 class="uppercase" style="font-weight: 600;color: #FFFFFF;">contact us</h3>
                     <p>You can contact us </p>
-                    <p  >Email: hduhdu@hdu.edu.cn                </p>
-                    <p > Phone :  86915114             </p>
+                    <p>Email: hduhdu@hdu.edu.cn </p>
+                    <p> Phone : 86915114 </p>
 
 
                 </div>
 
 
             </div>
-            </div>
+        </div>
 
     </div>
 </section>
@@ -266,7 +267,8 @@
     </iframe>
     <div style="float:left;text-align: left;position: relative;left:250px;top: 70px;line-height: 40px">
         <p>
-            Address: No. 1158, No. 2 Avenue, Baiyang Street, <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Economic Development Zone, Hangzhou, China <br>
+            Address: No. 1158, No. 2 Avenue, Baiyang Street, <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Economic
+            Development Zone, Hangzhou, China <br>
             Zip Code:310018<br>
             Tel: 0571-86915114
         </p>
@@ -287,11 +289,10 @@
 
                 <div class="widget clearfix">
 
-                    <img src="/static/images/web/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
+                    <img src="/static/images/web/hdu_ics_logo.png" alt="" class="footer-logo"
+                         style="float: left;width: 100%">
 
                     <p style="position: relative;top:5px;left:25px">We will always update the meeting time as above.</p>
-
-
 
 
                 </div>
@@ -309,24 +310,23 @@
                     </li>
 
                     <li class="sub-menu">
-                        <a href="conference.html" class="sf-with-ul">
+                        <a href="conference" class="sf-with-ul">
                             <div>conferences</div>
                         </a>
 
                     </li>
 
 
-
                     <li class="sub-menu">
-                        <a href="chairs.html" class="sf-with-ul">
+                        <a href="chairs" class="sf-with-ul">
                             <div>Chairs</div>
                         </a>
 
                     </li>
 
 
-                    <li class="sub-menu" >
-                        <a href="about.html" class="sf-with-ul">
+                    <li class="sub-menu">
+                        <a href="about" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
 
@@ -334,9 +334,7 @@
                     </li>
 
 
-
                 </ul>
-
 
 
                 <!-- #top-search end -->
@@ -344,24 +342,11 @@
             </nav>
 
 
-
         </div>
 
     </div>
 
     <!-- .footer-widgets-wrap end -->
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- Copyrights
         ============================================= -->
     <div id="copyrights">
@@ -385,12 +370,12 @@
 
         </div>
 
-    </div></div>
+    </div>
+    </div>
     <!-- #copyrights end -->
 
 </footer>
 <script type="text/javascript" src="/static/js/functions.js"></script>
-
 
 
 <!-- #content end -->
