--- a/templates/team.html
+++ b/templates/team.html
@@ -152,27 +152,27 @@
                 <nav class="primary-menu">
                     <ul class="down-menu nav-menu" style="touch-action: pan-y;">
                         <li>
-                            <a href="index.html">
+                            <a href="index">
                                 <div>Home</div>
                             </a>
                         </li>
                         <li class="sub-menu">
-                            <a href="conference.html" class="sf-with-ul">
+                            <a href="conference" class="sf-with-ul">
                                 <div>conferences</div>
                             </a>
                         </li>
                         <li class="sub-menu">
-                            <a href="chairs.html" class="sf-with-ul">
+                            <a href="chairs" class="sf-with-ul">
                                 <div>Chairs</div>
                             </a>
                         </li>
                         <li class="sub-menu">
-                            <a href="about.html" class="sf-with-ul">
+                            <a href="about" class="sf-with-ul">
                                 <div>About Us</div>
                             </a>
                         </li>
                         <li class="sub-menu">
-                            <a href="team.html" class="sf-with-ul">
+                            <a href="team" class="sf-with-ul">
                                 <div>GROUP</div>
                             </a>
                         </li>
@@ -306,23 +306,23 @@
             <nav class="primary-menu">
                 <ul class="down-menu nav-menu" style="touch-action: pan-y;">
                     <li>
-                        <a href="index.html">
+                        <a href="index">
                             <div>Home</div>
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="conference.html" class="sf-with-ul">
+                        <a href="conference" class="sf-with-ul">
                             <div>conferences</div>
                         </a>
 
                     </li>
                     <li class="sub-menu">
-                        <a href="chairs.html" class="sf-with-ul">
+                        <a href="chairs" class="sf-with-ul">
                             <div>Chairs</div>
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="about.html" class="sf-with-ul">
+                        <a href="about" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
                     </li>
